Chore: increase z-index range to avoid cards overlap during movement

--- a/styles.css
+++ b/styles.css
@@ -71,7 +71,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  transition: transform 300ms ease-out; /* cubic-bezier(0.34, 1.2, 0.64, 1) */
+  transition: transform 600ms ease-out; /* cubic-bezier(0.34, 1.2, 0.64, 1) */
   /* Important for swiping */
   /*scroll-snap-align: center;*/
 
